unpackaged/main/default/objects/ApprovalRequest__c/ApprovalRequest__c.object-meta.xml
<CustomObject>
    <label>Approval Request</label>
    <nameField>
        <displayFormat>AR{00000}</displayFormat>
        <label>Approval Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ApprovalRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>