unpackaged/main/default/objects/ApprovalRequest__c/fields/CloseComments__c.field-meta.xml
<CustomField>
    <fullName>CloseComments__c</fullName>
    <label>Close Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>