unpackaged/main/default/objects/ApprovalRequest__c/fields/isEscalated__c.field-meta.xml
<CustomField>
    <fullName>isEscalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Escalated</label>
    <type>Checkbox</type>
</CustomField>