unpackaged/main/default/objects/ApprovalRequest__c/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApprovalRequests</relationshipName>
    <type>Lookup</type>
</CustomField>