unpackaged/main/default/objects/ApprovalRequest__c/fields/RequiredFinanceCount__c.field-meta.xml
<CustomField>
    <fullName>RequiredFinanceCount__c</fullName>
    <label>Required Finance Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>