unpackaged/main/default/objects/ApprovalRequest__c/fields/RequiredManagerCount__c.field-meta.xml
<CustomField>
    <fullName>RequiredManagerCount__c</fullName>
    <label>Required Manager Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>