unpackaged/main/default/objects/ApprovalRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>RequiredFinanceCount__c</columns>
    <columns>RequiredManagerCount__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>